[workspace]
resolver = "2"

members = [
    "contracts/key_manager",
    "contracts/vision_records",
    "contracts/ai_integration",
    "contracts/staking",
    "contracts/compliance",
    "contracts/common",
    "contracts/identity",
    "contracts/zk_verifier",
    "contracts/zk_voting",
    "contracts/fhir",
    "contracts/cross_chain",
    "contracts/analytics",
    "contracts/treasury",
    "contracts/audit",
    "contracts/emr_bridge",
    "contracts/orchestrator",
    "contracts/state_channel",
    "contracts/metering",
    "contracts/vault",
    "contracts/delegation",
    "contracts/governor",
    "sdk/zk_prover",
    "test",
]

[workspace.package]
version = "1.2.2"
authors = ["Stellar-Teye Contributors"]
license = "MIT"
edition = "2021"
repository = "https://github.com/Stellar-Teye/Teye-Contracts"
rust-version = "1.78"

[workspace.dependencies]
soroban-sdk = "25.0.0"
proptest = "1"
proptest-derive = "0.4"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
