[package]
name = "metering"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
autotests = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[[test]]
name = "access_test"
path = "tests/access_test.rs"

[[test]]
name = "validation_test"
path = "tests/validation_test.rs"

[dependencies]
soroban-sdk = { workspace = true }
teye-common = { path = "../common", package = "common" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[[test]]
name = "init_test"
path = "tests/init_test.rs"
